@@ -23,6 +23,7 @@
     -tls_cafile:       The file with the list of CA certificates.
     -tls_capath:       The directory which contains the CA certificates.
     -tls_ciphers:      TLS cipher suite preference lists.
+    -tls_fingerprint:  Pinned certificate fingerprint.
     -auto:             Automatically connects to the server on startup.
     -noauto:           Doesn't connect to the server on startup.
     -network:          The network the server belongs to.
