@@ -29,6 +29,7 @@ char *tls_pass;
 char *tls_cafile;
 char *tls_capath;
 char *tls_ciphers;
+char *tls_fingerprint;
 
 GIOChannel *connect_handle; /* connect using this handle */
 
