@@ -181,6 +181,8 @@ static void server_setup_fill_server(SERVER_CONNECT_REC *conn,
 		conn->tls_capath = g_strdup(sserver->tls_capath);
 	if (conn->tls_ciphers == NULL && sserver->tls_ciphers != NULL && sserver->tls_ciphers[0] != '\0')
 		conn->tls_ciphers = g_strdup(sserver->tls_ciphers);
+	if (conn->tls_fingerprint == NULL && sserver->tls_fingerprint != NULL && sserver->tls_fingerprint[0] != '\0')
+		conn->tls_fingerprint = g_strdup(sserver->tls_fingerprint);
 
 	server_setup_fill_reconn(conn, sserver);
 
@@ -435,6 +437,11 @@ static SERVER_SETUP_REC *server_setup_read(CONFIG_NODE *node)
 		value = config_node_get_str(node, "ssl_ciphers", NULL);
 	rec->tls_ciphers = g_strdup(value);
 
+	value = config_node_get_str(node, "tls_fingerprint", NULL);
+	if (value == NULL)
+		value = config_node_get_str(node, "ssl_fingerprint", NULL);
+	rec->tls_fingerprint = g_strdup(value);
+
 	if (rec->tls_cafile || rec->tls_capath)
 		rec->tls_verify = TRUE;
 	if (rec->tls_cert != NULL || rec->tls_verify)
@@ -478,6 +485,7 @@ static void server_setup_save(SERVER_SETUP_REC *rec)
 	iconfig_node_set_str(node, "tls_cafile", rec->tls_cafile);
 	iconfig_node_set_str(node, "tls_capath", rec->tls_capath);
 	iconfig_node_set_str(node, "tls_ciphers", rec->tls_ciphers);
+	iconfig_node_set_str(node, "tls_fingerprint", rec->tls_fingerprint);
 
 	iconfig_node_set_str(node, "own_host", rec->own_host);
 
@@ -521,6 +529,7 @@ static void server_setup_destroy(SERVER_SETUP_REC *rec)
 	g_free_not_null(rec->tls_cafile);
 	g_free_not_null(rec->tls_capath);
 	g_free_not_null(rec->tls_ciphers);
+	g_free_not_null(rec->tls_fingerprint);
 	g_free(rec->address);
 	g_free(rec);
 }
