@@ -7,6 +7,7 @@ v0.8.18-head 2014-XX-YY  The Irssi team <staff@irssi.org>
 	+ TLS: Rename SSL to TLS throughout the code and command interfaces.
 	+ TLS: Automatically connect using TLS for known IRC networks that supports encrypted connections.
 	+ TLS: OpenSSL is now a required dependency.
+	+ TLS: Add certificate fingerprint pinning support.
 
 v0.8.17 2014-10-11  The Irssi team <staff@irssi.org>
 	+ Document that SSL connections aren't properly handled during /UPGRADE. See Github PR #39.
